fix: dialog z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,7 +79,7 @@
   font-family: TwitterChirp, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
   color: rgb(231, 233, 234);
   font-size: 15px;
-  z-index: 10;
+  z-index: 9999;
 }
 
 .SCDialogBGWrapper {
